--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,11 @@
 {
     "ServerKind": 0,
     "OrganizationName": "jizilin"
+    {
+        "ServerKind": 0,
+        "OrganizationName": "Hello",
+        "ClassPlanSource": {
+            "Value": "https://raw.githubusercontent.com/jizilin6732/classisland-mgmt-cfg/master/classplans.json",
+            "Version": 2
+        }
 }
